# stronka

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
backend/: alembic.ini  package.json  pyproject.toml  server.js
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  deps.py  router.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  finance.py  notification.py  user.py
backend/app/repositories/: __init__.py  base.py  finance.py  user.py
backend/app/schemas/: __init__.py  base.py  finance.py  user.py
backend/app/services/: __init__.py  analytics.py  auth.py  finance.py  notification.py  user.py
backend/app/tasks/: __init__.py  data_tasks.py  email_tasks.py  notification_tasks.py  report_tasks.py
backend/app/utils/: __init__.py  email.py  helpers.py
backend/config/: db.js  security.js
backend/controllers/: authController.js  dailyEntriesController.js  goalsController.js  investmentsController.js
backend/middleware/: auth.js  errorHandler.js  rateLimiter.js  validation.js
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/models/: DailyEntry.js  Investment.js  MonthlyGoal.js  User.js
backend/routes/: auth.js  dailyEntries.js  goals.js  investments.js
backend/scripts/: create_superuser.py  seed_data.py
backend/tests/: conftest.py  test_auth.py
backend/utils/: sanitizers.js  validators.js
(+32 files in other folders)
